--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <form name="login_form">
 	<div class="login_form_top">
 	  <h1>エスパニョールグループ</h1>
-	  <h2>ログイン画面</h2>
+	  <h2>療養者・医療従事者専用クーポン</h2>
+	  <h3>ログイン画面</h3>
 	  <p>UserID、Passwordをご入力の上、「LOGIN」ボタンをクリックしてください。</p>
 	</div>
 	<div class="login_form_btm">
